Math expression Evaluator API

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "langleyfoxall/math_eval": "^2.0",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5"
     },
@@ -30,7 +31,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "app/Helpers/Calculator.php"
+        ]
     },
     "scripts": {
         "post-autoload-dump": [
